recursion.cons.increasing.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
  def length(l:List[Int]): Int = {
  if (l == Nil) {
    return true
  };else {
    
  };return 1+length(l.tail)
};if (length == 1) {
    return true
  };else if(l.head<= l.tail.head) {
    return increasing(l.tail)
  };else {
    return false
  }
}